integrated GTest from TeamKarte_HJT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,29 @@ target_include_directories(Bank PUBLIC src/headers) # 'src/headers/' ist unser r
                                                     # #include "headers/kreditkarte.h" wird zu #include "kreditkarte.h"
 
 target_compile_features(Bank PUBLIC cxx_std_17) # compiler optionen
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(
+  bank_test
+  ${CMAKE_CURRENT_SOURCE_DIR}/test/Kreditkarte_test.cpp
+
+ "src/Karte.cpp" "src/Kreditkarte.cpp")
+target_link_libraries(
+  bank_test
+  GTest::gtest_main
+)
+target_include_directories(bank_test PUBLIC src/headers)
+
+
+include(GoogleTest)
+gtest_discover_tests(bank_test)
